parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> principal
Rule 2     programa -> func_loop principal
Rule 3     programa -> declara_var programa
Rule 4     principal -> VAZIO PRINCIPAL ABRE_PAR FECHA_PAR NOVA_LINHA sequencia_decl FIM
Rule 5     func_loop -> func_decl
Rule 6     func_loop -> func_loop func_decl
Rule 7     func_decl -> tipo ID ABRE_PAR parametro_decl FECHA_PAR NOVA_LINHA sequencia_decl FIM NOVA_LINHA
Rule 8     sequencia_decl -> declaracao
Rule 9     sequencia_decl -> sequencia_decl declaracao
Rule 10    declaracao -> se_decl
Rule 11    declaracao -> repita_decl
Rule 12    declaracao -> atribuicao_decl
Rule 13    declaracao -> leia_decl
Rule 14    declaracao -> escreva_decl
Rule 15    declaracao -> declara_var
Rule 16    declaracao -> retorna_decl
Rule 17    retorna_decl -> RETORNA ABRE_PAR ID FECHA_PAR
Rule 18    retorna_decl -> RETORNA ABRE_PAR numero_decl FECHA_PAR
Rule 19    numero_decl -> INTEIRO
Rule 20    numero_decl -> FLUTUANTE
Rule 21    se_decl -> SE exp_decl ENTAO NOVA_LINHA sequencia_decl NOVA_LINHA FIM NOVA_LINHA
Rule 22    se_decl -> SE exp_decl ENTAO NOVA_LINHA sequencia_decl NOVA_LINHA SENAO NOVA_LINHA sequencia_decl NOVA_LINHA FIM NOVA_LINHA
Rule 23    repita_decl -> REPITA NOVA_LINHA sequencia_decl ATE exp_decl NOVA_LINHA
Rule 24    atribuicao_decl -> ID ATRIBUICAO exp_decl NOVA_LINHA
Rule 25    leia_decl -> LEIA ABRE_PAR ID FECHA_PAR NOVA_LINHA
Rule 26    escreva_decl -> ESCREVA ABRE_PAR exp_decl FECHA_PAR NOVA_LINHA
Rule 27    escreva_decl -> ESCREVA ABRE_PAR chamada_func FECHA_PAR NOVA_LINHA
Rule 28    chamada_func -> ID ABRE_PAR parametro_chama_func FECHA_PAR
Rule 29    parametro_chama_func -> ID
Rule 30    parametro_chama_func -> numero_decl
Rule 31    parametro_chama_func -> parametro_chama_func ID
Rule 32    exp_decl -> simples_exp
Rule 33    exp_decl -> simples_exp compara_op simples_exp
Rule 34    compara_op -> IGUAL
Rule 35    compara_op -> MENOR
Rule 36    compara_op -> MAIOR
Rule 37    compara_op -> MENOR_IGUAL
Rule 38    compara_op -> MAIOR_IGUAL
Rule 39    simples_exp -> termo
Rule 40    simples_exp -> simples_exp soma_sub termo
Rule 41    soma_sub -> SOMA
Rule 42    soma_sub -> SUB
Rule 43    termo -> fator
Rule 44    termo -> termo mult_div fator
Rule 45    mult_div -> MULT
Rule 46    mult_div -> DIVISAO
Rule 47    fator -> ID
Rule 48    fator -> numero_decl
Rule 49    fator -> ABRE_PAR exp_decl FECHA_PAR
Rule 50    declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA
Rule 51    parametro_decl -> parametro_decl VIRGULA tipo DOIS_PONTOS ID
Rule 52    parametro_decl -> tipo DOIS_PONTOS ID
Rule 53    tipo -> VAZIO
Rule 54    tipo -> INTEIRO
Rule 55    tipo -> FLUTUANTE

Terminals, with rules where they appear

ABRE_PAR             : 4 7 17 18 25 26 27 28 49
ATE                  : 23
ATRIBUICAO           : 24
DIVISAO              : 46
DOIS_PONTOS          : 50 51 52
ENTAO                : 21 22
ESCREVA              : 26 27
FECHA_PAR            : 4 7 17 18 25 26 27 28 49
FIM                  : 4 7 21 22
FLUTUANTE            : 20 55
ID                   : 7 17 24 25 28 29 31 47 50 51 52
IGUAL                : 34
INTEIRO              : 19 54
LEIA                 : 25
MAIOR                : 36
MAIOR_IGUAL          : 38
MENOR                : 35
MENOR_IGUAL          : 37
MULT                 : 45
NOVA_LINHA           : 4 7 7 21 21 21 22 22 22 22 22 23 23 24 25 26 27 50
PRINCIPAL            : 4
REPITA               : 23
RETORNA              : 17 18
SE                   : 21 22
SENAO                : 22
SOMA                 : 41
SUB                  : 42
VAZIO                : 4 53
VIRGULA              : 51
error                : 

Nonterminals, with rules where they appear

atribuicao_decl      : 12
chamada_func         : 27
compara_op           : 33
declara_var          : 3 15
declaracao           : 8 9
escreva_decl         : 14
exp_decl             : 21 22 23 24 26 49
fator                : 43 44
func_decl            : 5 6
func_loop            : 2 6
leia_decl            : 13
mult_div             : 44
numero_decl          : 18 30 48
parametro_chama_func : 28 31
parametro_decl       : 7 51
principal            : 1 2
programa             : 3 0
repita_decl          : 11
retorna_decl         : 16
se_decl              : 10
sequencia_decl       : 4 7 9 21 22 22 23
simples_exp          : 32 33 33 40
soma_sub             : 40
termo                : 39 40 44
tipo                 : 7 50 51 52

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . principal
    (2) programa -> . func_loop principal
    (3) programa -> . declara_var programa
    (4) principal -> . VAZIO PRINCIPAL ABRE_PAR FECHA_PAR NOVA_LINHA sequencia_decl FIM
    (5) func_loop -> . func_decl
    (6) func_loop -> . func_loop func_decl
    (50) declara_var -> . tipo DOIS_PONTOS ID NOVA_LINHA
    (7) func_decl -> . tipo ID ABRE_PAR parametro_decl FECHA_PAR NOVA_LINHA sequencia_decl FIM NOVA_LINHA
    (53) tipo -> . VAZIO
    (54) tipo -> . INTEIRO
    (55) tipo -> . FLUTUANTE

    VAZIO           shift and go to state 2
    INTEIRO         shift and go to state 8
    FLUTUANTE       shift and go to state 9

    principal                      shift and go to state 5
    func_decl                      shift and go to state 3
    programa                       shift and go to state 6
    declara_var                    shift and go to state 7
    tipo                           shift and go to state 1
    func_loop                      shift and go to state 4

state 1

    (50) declara_var -> tipo . DOIS_PONTOS ID NOVA_LINHA
    (7) func_decl -> tipo . ID ABRE_PAR parametro_decl FECHA_PAR NOVA_LINHA sequencia_decl FIM NOVA_LINHA

    DOIS_PONTOS     shift and go to state 10
    ID              shift and go to state 11


state 2

    (4) principal -> VAZIO . PRINCIPAL ABRE_PAR FECHA_PAR NOVA_LINHA sequencia_decl FIM
    (53) tipo -> VAZIO .

    PRINCIPAL       shift and go to state 12
    DOIS_PONTOS     reduce using rule 53 (tipo -> VAZIO .)
    ID              reduce using rule 53 (tipo -> VAZIO .)


state 3

    (5) func_loop -> func_decl .

    VAZIO           reduce using rule 5 (func_loop -> func_decl .)
    INTEIRO         reduce using rule 5 (func_loop -> func_decl .)
    FLUTUANTE       reduce using rule 5 (func_loop -> func_decl .)


state 4

    (2) programa -> func_loop . principal
    (6) func_loop -> func_loop . func_decl
    (4) principal -> . VAZIO PRINCIPAL ABRE_PAR FECHA_PAR NOVA_LINHA sequencia_decl FIM
    (7) func_decl -> . tipo ID ABRE_PAR parametro_decl FECHA_PAR NOVA_LINHA sequencia_decl FIM NOVA_LINHA
    (53) tipo -> . VAZIO
    (54) tipo -> . INTEIRO
    (55) tipo -> . FLUTUANTE

    VAZIO           shift and go to state 2
    INTEIRO         shift and go to state 8
    FLUTUANTE       shift and go to state 9

    principal                      shift and go to state 14
    func_decl                      shift and go to state 15
    tipo                           shift and go to state 13

state 5

    (1) programa -> principal .

    $end            reduce using rule 1 (programa -> principal .)


state 6

    (0) S' -> programa .



state 7

    (3) programa -> declara_var . programa
    (1) programa -> . principal
    (2) programa -> . func_loop principal
    (3) programa -> . declara_var programa
    (4) principal -> . VAZIO PRINCIPAL ABRE_PAR FECHA_PAR NOVA_LINHA sequencia_decl FIM
    (5) func_loop -> . func_decl
    (6) func_loop -> . func_loop func_decl
    (50) declara_var -> . tipo DOIS_PONTOS ID NOVA_LINHA
    (7) func_decl -> . tipo ID ABRE_PAR parametro_decl FECHA_PAR NOVA_LINHA sequencia_decl FIM NOVA_LINHA
    (53) tipo -> . VAZIO
    (54) tipo -> . INTEIRO
    (55) tipo -> . FLUTUANTE

    VAZIO           shift and go to state 2
    INTEIRO         shift and go to state 8
    FLUTUANTE       shift and go to state 9

    principal                      shift and go to state 5
    func_decl                      shift and go to state 3
    programa                       shift and go to state 16
    declara_var                    shift and go to state 7
    tipo                           shift and go to state 1
    func_loop                      shift and go to state 4

state 8

    (54) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 54 (tipo -> INTEIRO .)
    ID              reduce using rule 54 (tipo -> INTEIRO .)


state 9

    (55) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 55 (tipo -> FLUTUANTE .)
    ID              reduce using rule 55 (tipo -> FLUTUANTE .)


state 10

    (50) declara_var -> tipo DOIS_PONTOS . ID NOVA_LINHA

    ID              shift and go to state 17


state 11

    (7) func_decl -> tipo ID . ABRE_PAR parametro_decl FECHA_PAR NOVA_LINHA sequencia_decl FIM NOVA_LINHA

    ABRE_PAR        shift and go to state 18


state 12

    (4) principal -> VAZIO PRINCIPAL . ABRE_PAR FECHA_PAR NOVA_LINHA sequencia_decl FIM

    ABRE_PAR        shift and go to state 19


state 13

    (7) func_decl -> tipo . ID ABRE_PAR parametro_decl FECHA_PAR NOVA_LINHA sequencia_decl FIM NOVA_LINHA

    ID              shift and go to state 11


state 14

    (2) programa -> func_loop principal .

    $end            reduce using rule 2 (programa -> func_loop principal .)


state 15

    (6) func_loop -> func_loop func_decl .

    VAZIO           reduce using rule 6 (func_loop -> func_loop func_decl .)
    INTEIRO         reduce using rule 6 (func_loop -> func_loop func_decl .)
    FLUTUANTE       reduce using rule 6 (func_loop -> func_loop func_decl .)


state 16

    (3) programa -> declara_var programa .

    $end            reduce using rule 3 (programa -> declara_var programa .)


state 17

    (50) declara_var -> tipo DOIS_PONTOS ID . NOVA_LINHA

    NOVA_LINHA      shift and go to state 20


state 18

    (7) func_decl -> tipo ID ABRE_PAR . parametro_decl FECHA_PAR NOVA_LINHA sequencia_decl FIM NOVA_LINHA
    (51) parametro_decl -> . parametro_decl VIRGULA tipo DOIS_PONTOS ID
    (52) parametro_decl -> . tipo DOIS_PONTOS ID
    (53) tipo -> . VAZIO
    (54) tipo -> . INTEIRO
    (55) tipo -> . FLUTUANTE

    VAZIO           shift and go to state 22
    INTEIRO         shift and go to state 8
    FLUTUANTE       shift and go to state 9

    tipo                           shift and go to state 21
    parametro_decl                 shift and go to state 23

state 19

    (4) principal -> VAZIO PRINCIPAL ABRE_PAR . FECHA_PAR NOVA_LINHA sequencia_decl FIM

    FECHA_PAR       shift and go to state 24


state 20

    (50) declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .

    FIM             reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    SE              reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    REPITA          reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    ID              reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    LEIA            reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    ESCREVA         reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    RETORNA         reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    VAZIO           reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    INTEIRO         reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    FLUTUANTE       reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    NOVA_LINHA      reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)
    ATE             reduce using rule 50 (declara_var -> tipo DOIS_PONTOS ID NOVA_LINHA .)


state 21

    (52) parametro_decl -> tipo . DOIS_PONTOS ID

    DOIS_PONTOS     shift and go to state 25


state 22

    (53) tipo -> VAZIO .

    DOIS_PONTOS     reduce using rule 53 (tipo -> VAZIO .)


state 23

    (7) func_decl -> tipo ID ABRE_PAR parametro_decl . FECHA_PAR NOVA_LINHA sequencia_decl FIM NOVA_LINHA
    (51) parametro_decl -> parametro_decl . VIRGULA tipo DOIS_PONTOS ID

    FECHA_PAR       shift and go to state 26
    VIRGULA         shift and go to state 27


state 24

    (4) principal -> VAZIO PRINCIPAL ABRE_PAR FECHA_PAR . NOVA_LINHA sequencia_decl FIM

    NOVA_LINHA      shift and go to state 28


state 25

    (52) parametro_decl -> tipo DOIS_PONTOS . ID

    ID              shift and go to state 29


state 26

    (7) func_decl -> tipo ID ABRE_PAR parametro_decl FECHA_PAR . NOVA_LINHA sequencia_decl FIM NOVA_LINHA

    NOVA_LINHA      shift and go to state 30


state 27

    (51) parametro_decl -> parametro_decl VIRGULA . tipo DOIS_PONTOS ID
    (53) tipo -> . VAZIO
    (54) tipo -> . INTEIRO
    (55) tipo -> . FLUTUANTE

    VAZIO           shift and go to state 22
    INTEIRO         shift and go to state 8
    FLUTUANTE       shift and go to state 9

    tipo                           shift and go to state 31

state 28

    (4) principal -> VAZIO PRINCIPAL ABRE_PAR FECHA_PAR NOVA_LINHA . sequencia_decl FIM
    (8) sequencia_decl -> . declaracao
    (9) sequencia_decl -> . sequencia_decl declaracao
    (10) declaracao -> . se_decl
    (11) declaracao -> . repita_decl
    (12) declaracao -> . atribuicao_decl
    (13) declaracao -> . leia_decl
    (14) declaracao -> . escreva_decl
    (15) declaracao -> . declara_var
    (16) declaracao -> . retorna_decl
    (21) se_decl -> . SE exp_decl ENTAO NOVA_LINHA sequencia_decl NOVA_LINHA FIM NOVA_LINHA
    (22) se_decl -> . SE exp_decl ENTAO NOVA_LINHA sequencia_decl NOVA_LINHA SENAO NOVA_LINHA sequencia_decl NOVA_LINHA FIM NOVA_LINHA
    (23) repita_decl -> . REPITA NOVA_LINHA sequencia_decl ATE exp_decl NOVA_LINHA
    (24) atribuicao_decl -> . ID ATRIBUICAO exp_decl NOVA_LINHA
    (25) leia_decl -> . LEIA ABRE_PAR ID FECHA_PAR NOVA_LINHA
    (26) escreva_decl -> . ESCREVA ABRE_PAR exp_decl FECHA_PAR NOVA_LINHA
    (27) escreva_decl -> . ESCREVA ABRE_PAR chamada_func FECHA_PAR NOVA_LINHA
    (50) declara_var -> . tipo DOIS_PONTOS ID NOVA_LINHA
    (17) retorna_decl -> . RETORNA ABRE_PAR ID FECHA_PAR
    (18) retorna_decl -> . RETORNA ABRE_PAR numero_decl FECHA_PAR
    (53) tipo -> . VAZIO
    (54) tipo -> . INTEIRO
    (55) tipo -> . FLUTUANTE

    SE              shift and go to state 47
    REPITA          shift and go to state 37
    ID              shift and go to state 34
    LEIA            shift and go to state 39
    ESCREVA         shift and go to state 40
    RETORNA         shift and go to state 35
    VAZIO           shift and go to state 22
    INTEIRO         shift and go to state 8
    FLUTUANTE       shift and go to state 9

    tipo                           shift and go to state 32
    declaracao                     shift and go to state 38
    se_decl                        shift and go to state 33
    sequencia_decl                 shift and go to state 36
    repita_decl                    shift and go to state 41
    leia_decl                      shift and go to state 42
    declara_var                    shift and go to state 43
    atribuicao_decl                shift and go to state 44
    retorna_decl                   shift and go to state 45
    escreva_decl                   shift and go to state 46

state 29

    (52) parametro_decl -> tipo DOIS_PONTOS ID .

    FECHA_PAR       reduce using rule 52 (parametro_decl -> tipo DOIS_PONTOS ID .)
    VIRGULA         reduce using rule 52 (parametro_decl -> tipo DOIS_PONTOS ID .)


state 30

    (7) func_decl -> tipo ID ABRE_PAR parametro_decl FECHA_PAR NOVA_LINHA . sequencia_decl FIM NOVA_LINHA
    (8) sequencia_decl -> . declaracao
    (9) sequencia_decl -> . sequencia_decl declaracao
    (10) declaracao -> . se_decl
    (11) declaracao -> . repita_decl
    (12) declaracao -> . atribuicao_decl
    (13) declaracao -> . leia_decl
    (14) declaracao -> . escreva_decl
    (15) declaracao -> . declara_var
    (16) declaracao -> . retorna_decl
    (21) se_decl -> . SE exp_decl ENTAO NOVA_LINHA sequencia_decl NOVA_LINHA FIM NOVA_LINHA
    (22) se_decl -> . SE exp_decl ENTAO NOVA_LINHA sequencia_decl NOVA_LINHA SENAO NOVA_LINHA sequencia_decl NOVA_LINHA FIM NOVA_LINHA
    (23) repita_decl -> . REPITA NOVA_LINHA sequencia_decl ATE exp_decl NOVA_LINHA
    (24) atribuicao_decl -> . ID ATRIBUICAO exp_decl NOVA_LINHA
    (25) leia_decl -> . LEIA ABRE_PAR ID FECHA_PAR NOVA_LINHA
    (26) escreva_decl -> . ESCREVA ABRE_PAR exp_decl FECHA_PAR NOVA_LINHA
    (27) escreva_decl -> . ESCREVA ABRE_PAR chamada_func FECHA_PAR NOVA_LINHA
    (50) declara_var -> . tipo DOIS_PONTOS ID NOVA_LINHA
    (17) retorna_decl -> . RETORNA ABRE_PAR ID FECHA_PAR
    (18) retorna_decl -> . RETORNA ABRE_PAR numero_decl FECHA_PAR
    (53) tipo -> . VAZIO
    (54) tipo -> . INTEIRO
    (55) tipo -> . FLUTUANTE

    SE              shift and go to state 47
    REPITA          shift and go to state 37
    ID              shift and go to state 34
    LEIA            shift and go to state 39
    ESCREVA         shift and go to state 40
    RETORNA         shift and go to state 35
    VAZIO           shift and go to state 22
    INTEIRO         shift and go to state 8
    FLUTUANTE       shift and go to state 9

    tipo                           shift and go to state 32
    declaracao                     shift and go to state 38
    se_decl                        shift and go to state 33
    sequencia_decl                 shift and go to state 48
    repita_decl                    shift and go to state 41
    leia_decl                      shift and go to state 42
    declara_var                    shift and go to state 43
    atribuicao_decl                shift and go to state 44
    retorna_decl                   shift and go to state 45
    escreva_decl                   shift and go to state 46

state 31

    (51) parametro_decl -> parametro_decl VIRGULA tipo . DOIS_PONTOS ID

    DOIS_PONTOS     shift and go to state 49


state 32

    (50) declara_var -> tipo . DOIS_PONTOS ID NOVA_LINHA

    DOIS_PONTOS     shift and go to state 10


state 33

    (10) declaracao -> se_decl .

    FIM             reduce using rule 10 (declaracao -> se_decl .)
    SE              reduce using rule 10 (declaracao -> se_decl .)
    REPITA          reduce using rule 10 (declaracao -> se_decl .)
    ID              reduce using rule 10 (declaracao -> se_decl .)
    LEIA            reduce using rule 10 (declaracao -> se_decl .)
    ESCREVA         reduce using rule 10 (declaracao -> se_decl .)
    RETORNA         reduce using rule 10 (declaracao -> se_decl .)
    VAZIO           reduce using rule 10 (declaracao -> se_decl .)
    INTEIRO         reduce using rule 10 (declaracao -> se_decl .)
    FLUTUANTE       reduce using rule 10 (declaracao -> se_decl .)
    NOVA_LINHA      reduce using rule 10 (declaracao -> se_decl .)
    ATE             reduce using rule 10 (declaracao -> se_decl .)


state 34

    (24) atribuicao_decl -> ID . ATRIBUICAO exp_decl NOVA_LINHA

    ATRIBUICAO      shift and go to state 50


state 35

    (17) retorna_decl -> RETORNA . ABRE_PAR ID FECHA_PAR
    (18) retorna_decl -> RETORNA . ABRE_PAR numero_decl FECHA_PAR

    ABRE_PAR        shift and go to state 51


state 36

    (4) principal -> VAZIO PRINCIPAL ABRE_PAR FECHA_PAR NOVA_LINHA sequencia_decl . FIM
    (9) sequencia_decl -> sequencia_decl . declaracao
    (10) declaracao -> . se_decl
    (11) declaracao -> . repita_decl
    (12) declaracao -> . atribuicao_decl
    (13) declaracao -> . leia_decl
    (14) declaracao -> . escreva_decl
    (15) declaracao -> . declara_var
    (16) declaracao -> . retorna_decl
    (21) se_decl -> . SE exp_decl ENTAO NOVA_LINHA sequencia_decl NOVA_LINHA FIM NOVA_LINHA
    (22) se_decl -> . SE exp_decl ENTAO NOVA_LINHA sequencia_decl NOVA_LINHA SENAO NOVA_LINHA sequencia_decl NOVA_LINHA FIM NOVA_LINHA
    (23) repita_decl -> . REPITA NOVA_LINHA sequencia_decl ATE exp_decl NOVA_LINHA
    (24) atribuicao_decl -> . ID ATRIBUICAO exp_decl NOVA_LINHA
    (25) leia_decl -> . LEIA ABRE_PAR ID FECHA_PAR NOVA_LINHA
    (26) escreva_decl -> . ESCREVA ABRE_PAR exp_decl FECHA_PAR NOVA_LINHA
    (27) escreva_decl -> . ESCREVA ABRE_PAR chamada_func FECHA_PAR NOVA_LINHA
    (50) declara_var -> . tipo DOIS_PONTOS ID NOVA_LINHA
    (17) retorna_decl -> . RETORNA ABRE_PAR ID FECHA_PAR
    (18) retorna_decl -> . RETORNA ABRE_PAR numero_decl FECHA_PAR
    (53) tipo -> . VAZIO
    (54) tipo -> . INTEIRO
    (55) tipo -> . FLUTUANTE

    FIM             shift and go to state 52
    SE              shift and go to state 47
    REPITA          shift and go to state 37
    ID              shift and go to state 34
    LEIA            shift and go to state 39
    ESCREVA         shift and go to state 40
    RETORNA         shift and go to state 35
    VAZIO           shift and go to state 22
    INTEIRO         shift and go to state 8
    FLUTUANTE       shift and go to state 9

    tipo                           shift and go to state 32
    declaracao                     shift and go to state 53
    se_decl                        shift and go to state 33
    repita_decl                    shift and go to state 41
    leia_decl                      shift and go to state 42
    declara_var                    shift and go to state 43
    atribuicao_decl                shift and go to state 44
    retorna_decl                   shift and go to state 45
    escreva_decl                   shift and go to state 46

state 37

    (23) repita_decl -> REPITA . NOVA_LINHA sequencia_decl ATE exp_decl NOVA_LINHA

    NOVA_LINHA      shift and go to state 54


state 38

    (8) sequencia_decl -> declaracao .
